# client-server-exercise

./: Cargo.toml
src/: lib.rs
src/types/: summary.rs
