[package]
name = "server_client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.14.0", features = ["full"] }
job_scheduler = "1.2.1"
serde = { version = "1.0", features = ["rc", "derive"] }
tokio-serde = { version = "0.6", features = ["bincode"] }
tokio-util = { version = "0.2", features = ["codec"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
rand = "0.5.5"

actix-rt = "1.1.0"
actix-web = "3.0.0-alpha.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
env_logger = "0.7.1"

lazy_static = "1.4.0"
once_cell = "1.8.0"
hyper = "0.13.5"

